# ProjektmodulSoftware

./: .gitignore  README.md  calendar_helper.py  config.py  main.py  motor.py  pyproject.toml  sample_user.yaml  test.py  user_config.schema.json  user_configuration.py
